# MotionDetector

./: README.md
Detector_application/: CMakeLists.txt  README.md
Detector_application/src/: main.cpp  main.hpp
Detector_application/src/camera/: camera.cpp
Detector_application/src/client/: client.cpp  client.hpp
Detector_application/src/detector/: detector.cpp  detector.hpp
Detector_application/src/os/: camera_thread.cpp  client_thread.cpp  os.hpp
Detector_application/src/utilities/: utilities.cpp
Server_application/: CMakeLists.txt  README.md
Server_application/src/: main.cpp
Server_application/src/notify/: notify.cpp  notify.hpp
Server_application/src/server/: server.cpp  server.hpp
Unknown_detector/: CMakeLists.txt
Unknown_detector/src/: main.cpp
Unknown_detector/src/camera/: camera.cpp  camera.hpp
Unknown_detector/src/client/: client.cpp
Unknown_detector/src/detector/: backgroundSubtraction.cpp  detector.cpp  detector.hpp
Unknown_detector/src/os/: camera_thread.cpp  client_thread.cpp  detector_thread.cpp
Unknown_detector/src/queue/: queue.h  queue.hpp
Unknown_detector/test/: testModel.c
socket_test_server/: CMakeLists.txt  main.cpp
